feat: Add utility functions for confetti engine, enhance color parsing, and improve options sanitization
- Introduced utility functions in `src/engine/utils.ts` for random number generation, angle conversion, clamping, interpolation, color parsing, and more.
- Enhanced color parsing to support hex and RGB/RGBA formats with input validation.
- Added functions to adjust color brightness and sanitize confetti options.
- Updated `CanvasConfettiOptions` in `src/types.ts` to increase default particle count and add size property.
- Created comprehensive tests for engine utilities and core engine functionalities in `tests/engine.test.ts`.
- Improved particle update tests in `tests/particle.test.ts` to ensure accurate physics application.

--- a/demo/index.html
+++ b/demo/index.html
@@ -65,9 +65,10 @@
     <p>Click anywhere on the screen to burst confetti at that location!</p>
   </div>
 
-  <script src="https://unpkg.com/canvas-confetti@1.9.3/dist/confetti.browser.js"></script>
+  <script src="../dist/confetti.browser.js"></script>
   <script>
-    // Use canvas-confetti for demo since our library requires React
+    // Use react-confetti-burst's canvas-confetti compatible API
+    const { confetti } = ReactConfettiBurst;
     
     // Basic burst from center
     document.getElementById('burstBtn').addEventListener('click', () => {
